--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~51.0.8",
     "expo-router": "^3.5.16",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gifted-chat": "^2.4.0",
