--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~51.0.8",
     "expo-router": "^3.5.16",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^10.12.2",
+    "firebase": "^10.3.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gifted-chat": "^2.4.0",
