--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-gifted-chat": "^2.4.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.1.0"
+    "react-native-svg": "^15.1.0",
+    "@react-native-community/netinfo": "11.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
