--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.1.0",
+    "expo-image-picker": "~15.0.5",
+    "expo-location": "~17.0.1",
+    "react-native-maps": "1.14.0",
     "@react-native-community/netinfo": "11.3.1"
   },
   "devDependencies": {
